# harmony-core

./: .clang-format  .gitignore  .test.cpp.kate-swp  CMakeLists.txt  MISSION.md  README.md  TODO.md  format.sh  test.cpp
cmake/modules/: FindCImg.cmake
core/: note.h
include/harmony-core/: .clef.hpp.kate-swp  accidental.hpp  clef.hpp  core.hpp  enums.hpp  h8tion.hpp  harmony-core.hpp  hc2img.hpp  interval.hpp  key.hpp  key_circle.hpp  mode.hpp  note.hpp  octave.hpp  staff.hpp  time_signature.hpp
include/harmony-core/h8tion/: h8tion.hpp
include/harmony-core/hc2img/: README.md  hc2img.hpp  list.hpp  list_param.hpp  staff_cord.hpp
include/harmony-core/hc2img/examples/: README.md
include/harmony-core/hc2img/images/: Readme.mb  images.hpp
include/harmony-core/hc2img/images/accidentals/: double_flat.hpp  double_sharp.hpp  flat.hpp  natural.hpp  sharp.hpp
include/harmony-core/hc2img/images/clefs/: c_clef.hpp  clefs.hpp  f_clef.hpp
include/harmony-core/hc2img/images/notes/: note_1.hpp
include/hc2img/: .staff_system.hpp.kate-swp  bar.hpp  data_bar.hpp  enum.hpp  enums.hpp  hc2img.hpp  list.hpp  list_param.hpp  staff.hpp  staff_cord.hpp  staff_system.hpp
include/hc2img/images/: images.hpp
include/hc2img/images/accidentals/: accidentals.hpp  double_flat.hpp  double_sharp.hpp  natural.hpp  sharp.hpp
include/hc2img/images/clefs/: f_clef.hpp  treble_clef.hpp
include/hc2img/images/notes/: note.hpp  note_1.hpp
include/images/: c_clef.hpp  f_clef.hpp  images.hpp  note.hpp  treble_clef.hpp
include/images/accidentals/: double_sharp.hpp  flat.hpp
include/images/clefs/: c_clef.hpp  treble_clef.hpp
include/images/notes/: note.hpp  note_1.hpp  notes.hpp
sources/: CMakeLists.txt  accidental.cpp  bar.cpp  clef.cpp  core.cpp  interval.cpp  key.cpp  list.cpp  mode.cpp  note.cpp  octave.cpp  specie.cpp  staff.cpp  staff_cord.cpp  staff_system.cpp  time_signature.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp/sources/: Makefile  cmake_install.cmake
